<resources>
    <string name="app_name">TP4_ProgMobile</string>
    <string name="title_magasin">Magasin</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_ajout">Ajout</string>

    <!--ACTIVITY AUTHENTIFICATION-->
    <string name="hint_courriel">Adresse Courriel</string>
    <string name="hint_mdp">Mot de Passe</string>
    <string name="txt_connecter">Se Connecter</string>
    <string name="txt_connexion">Connexion</string>
    <string name="txt_sinscrire">S\'inscrire</string>

    <string name="txt_deconnexion">Se déconnecter</string>

    <!--ITEM ROW-->
    <string name="mag_nom">Nom</string>
    <string name="mag_cat">Catégorie</string>
    <string name="mag_prix">Prix</string>

    <!--AJOUTER ITEM -->
    <string name="ajouter">Ajouter</string>
    <string name="ajouter_item">Ajouter un item</string>

    <!--MODIFIER ITEM-->
    <string name="modifier">Modifier</string>
    <string name="hint_nom">Nom de l\'item</string>
    <string name="hint_prix">Prix de l\'item</string>

    <!--NOTIFICATION-->
    <string name="notif">Notification</string>
    <string name="notif_desc">Un nouvel item a été ajouté</string>
    <string name="notif_id">ajout_id</string>

</resources>