<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ajouter.AjouterFragment">

    <TextView
        android:id="@+id/textViewAjouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_item"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAjouter">

        <EditText
            android:id="@+id/ed_nom"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/mag_nom"
            android:inputType="text"
            android:padding="8dp" />

        <EditText
            android:id="@+id/ed_prix"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/mag_prix"
            android:inputType="number"
            android:padding="8dp" />

        <Spinner
            android:id="@+id/spinner_categorie"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:entries="@array/categories" />

        <Button
            android:id="@+id/btn_ajouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ajouter" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>